# victoria-receptionist

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  schema.sql  widget.css  widget.js
.github/workflows/: build-and-push.yml
k8s/: deployment.yaml  ingress.yaml  namespace.yaml  postgres.yaml  secrets.example.yaml  service.yaml
scripts/: build_rag_index.py
src/victoria/: __init__.py  config.py  conversation.py  db.py  github_issues.py  main.py  mock_llm.py  models.py  personas.py  rag.py  rebrand.py  triton_client.py  web_search.py
tests/: test_smoke.py
